--- a/css/typography.css
+++ b/css/typography.css
@@ -1,4 +1,4 @@
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/jensimmons\/Sites\/thelayoutsahead\/sass\/typography\.scss}line{font-family:\0000323}}
+/* line 23, ../sass/typography.scss */
 body {
   font-family: "pt-sans", Verdana, Tahoma, "DejaVu Sans", sans-serif;
   line-height: 1.35em;
@@ -7,7 +7,7 @@ body {
   background: white;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/jensimmons\/Sites\/thelayoutsahead\/sass\/typography\.scss}line{font-family:\0000339}}
+/* line 39, ../sass/typography.scss */
 h1 {
   font-family: "magistral-web", Verdana, Tahoma, "DejaVu Sans", sans-serif;
   line-height: 1.15em;
@@ -17,7 +17,7 @@ h1 {
   font-size: 48px;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/jensimmons\/Sites\/thelayoutsahead\/sass\/typography\.scss}line{font-family:\0000343}}
+/* line 43, ../sass/typography.scss */
 h2 {
   font-family: "magistral-web", Verdana, Tahoma, "DejaVu Sans", sans-serif;
   line-height: 1.15em;
@@ -27,7 +27,7 @@ h2 {
   font-size: 36px;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/jensimmons\/Sites\/thelayoutsahead\/sass\/typography\.scss}line{font-family:\0000347}}
+/* line 47, ../sass/typography.scss */
 h3 {
   font-family: "magistral-web", Verdana, Tahoma, "DejaVu Sans", sans-serif;
   line-height: 1.15em;
@@ -37,7 +37,7 @@ h3 {
   font-size: 32px;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/jensimmons\/Sites\/thelayoutsahead\/sass\/typography\.scss}line{font-family:\0000351}}
+/* line 51, ../sass/typography.scss */
 h4 {
   font-family: "magistral-web", Verdana, Tahoma, "DejaVu Sans", sans-serif;
   line-height: 1.15em;
@@ -47,7 +47,7 @@ h4 {
   font-size: 24px;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/jensimmons\/Sites\/thelayoutsahead\/sass\/typography\.scss}line{font-family:\0000355}}
+/* line 55, ../sass/typography.scss */
 h5 {
   font-family: "magistral-web", Verdana, Tahoma, "DejaVu Sans", sans-serif;
   line-height: 1.15em;
@@ -57,7 +57,7 @@ h5 {
   font-size: 18px;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/jensimmons\/Sites\/thelayoutsahead\/sass\/typography\.scss}line{font-family:\0000359}}
+/* line 59, ../sass/typography.scss */
 h6 {
   font-family: "magistral-web", Verdana, Tahoma, "DejaVu Sans", sans-serif;
   line-height: 1.15em;
@@ -67,21 +67,21 @@ h6 {
   font-size: 16px;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/jensimmons\/Sites\/thelayoutsahead\/sass\/typography\.scss}line{font-family:\0000363}}
+/* line 63, ../sass/typography.scss */
 p {
   margin: 1em 0;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/jensimmons\/Sites\/thelayoutsahead\/sass\/typography\.scss}line{font-family:\0000366}}
+/* line 66, ../sass/typography.scss */
 a {
   color: #1078C2;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/jensimmons\/Sites\/thelayoutsahead\/sass\/typography\.scss}line{font-family:\0000376}}
+/* line 76, ../sass/typography.scss */
 .alt body {
   font-family: "minion-pro", Georgia, "Times New Roman", "DejaVu Serif", serif;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/jensimmons\/Sites\/thelayoutsahead\/sass\/typography\.scss}line{font-family:\0000379}}
+/* line 79, ../sass/typography.scss */
 .alt h1, .alt h2, .alt h3, .alt h4, .alt h5, .alt h6 {
   font-family: "minion-pro", Georgia, "Times New Roman", "DejaVu Serif", serif;
   color: #444;
