--- a/css/basic-layout.css
+++ b/css/basic-layout.css
@@ -8,3 +8,9 @@ main {
 section {
   margin: 100px 0;
 }
+
+/* line 8, ../sass/basic-layout.scss */
+footer {
+  text-align: center;
+  margin: 3em 0 3em 0;
+}
