--- a/sass/basic-layout.scss
+++ b/sass/basic-layout.scss
@@ -1,3 +1,7 @@
+htm, body {
+  margin: 0;
+  padding: 0;
+}
 main {
   width: 80%;
   margin: 2em auto;
@@ -8,4 +12,5 @@ section {
 footer {
   text-align: center;
   margin: 3em 0 3em 0;
+  clear: both;
 }
