--- a/sass/typography.scss
+++ b/sass/typography.scss
@@ -73,12 +73,13 @@ a {
 //-----------------------------------------------------------------------
 
 .alt {
-  body {
+  main {
     font-family: $minion-pro;
+    color: #000;
   }
   h1, h2, h3, h4, h5, h6 {
     font-family: $minion-pro;  
-    color: #444;
+    color: #000;
   }
 }
 
