fixing lack-of-clearing bug in shapes demo
and too bad! That bug is COOL LOOKING. (but makes the demo too complex)

--- a/sass/shapes.scss
+++ b/sass/shapes.scss
@@ -10,6 +10,10 @@ p {
   margin: 0;
 }
 
+section {
+  clear: both;
+}
+
 .second-example img {
   -webkit-shape-outside: circle(); // will be supported in iOS8 with a webkit prefix
   shape-outside: circle(); // is currently supported in Chrome 37+ 
