adding new examples

--- a/css/viewport-2.css
+++ b/css/viewport-2.css
@@ -9,11 +9,11 @@ header {
   border: 20px solid #000;
   height: 100vh;
   background: yellow;
-  padding: 3em 6em;
-  text-align: center; }
+  padding: 3em 6em; }
   header h1 {
     margin-top: 0;
-    font-size: 8vw; }
+    font-size: 10vw;
+    text-align: center; }
 
 article {
   padding: 1em 3em; }
@@ -25,5 +25,7 @@ footer {
 header.shorter {
   background: #C589FF;
   height: 90vh; }
+  header.shorter h1 {
+    font-size: 8vw; }
   header.shorter h2 {
-    font-size: 4vw; }
+    font-size: 6vw; }
