--- a/sass/rotation.scss
+++ b/sass/rotation.scss
@@ -1,6 +1,6 @@
 .rotation-1 {
   main {
-    width: 300px;
+    max-width: 300px;
     -webkit-transform: rotate(-10deg);
     transform: rotate(-10deg);
   }
