--- a/css/home.css
+++ b/css/home.css
@@ -17,13 +17,14 @@ h1 {
   color: white; }
 
 ul {
-  margin-left: 2em;
-  padding: 0; }
+  margin-left: 0;
+  padding: 0;
+  list-style: none; }
 
 ul.demo-list {
   display: flex;
   flex-wrap: wrap;
-  margin: -8vw 0 0 0;
+  margin: -7.5vw 0 0 0;
   align-items: center;
   justify-content: space-around; }
 
@@ -40,20 +41,24 @@ li.demo {
   flex-wrap: wrap; }
 
 li.demo:first-child {
-  width: 12vw;
-  height: 12vw; }
+  width: 16vw;
+  height: 16vw; }
+  li.demo:first-child h2 {
+    width: 9vw; }
 
 li.demo:nth-child(2) {
-  width: 24vw;
-  height: 24vw; }
+  width: 20vw;
+  height: 20vw; }
 
 li.demo:nth-child(3) {
-  width: 21vw;
-  height: 21vw; }
+  width: 22vw;
+  height: 22vw; }
+  li.demo:nth-child(3) h2 {
+    width: 11vw; }
 
 li.demo:nth-child(4) {
-  width: 18vw;
-  height: 18vw; }
+  width: 21vw;
+  height: 21vw; }
 
 li.demo:last-child {
   width: 20vw;
@@ -69,3 +74,5 @@ a {
 
 p {
   text-align: center; }
+
+/*# sourceMappingURL=home.css.map */
